Removed deprecated Observer and Observable Migrated to Flow
- Code clean-up
- All Client Classes no longer use Observer or Observable